--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
     "autoprefixer": "^9.5.0",
+    "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "css-mqpacker": "^7.0.0",
@@ -24,8 +27,10 @@
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.12.2",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "npm": "^6.9.0",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
